Kata 7,8 and 9 solved